Revert "Merge branch 'main' into mikecw/dev"
This reverts commit 5368d9d75a182becc27c27be6c708d4c1c53da7b, reversing
changes made to 515498e607b26dbfc8e5f11d87d7a8940cb41de9.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,3 +2,9 @@
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
  */
+
+.heroBanner {
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
