feat: unicode range

--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -37,7 +37,7 @@
 
 button.footerButton {
   color: #7798ef;
-  font-family: NotoSans;
+  font-family: NotoSans NotoSansSC-Regular;
   font-size: 14px;
   text-transform: none;
   border: 1px solid #7798ef;
