--- a/src/theme/Drawer/style.css
+++ b/src/theme/Drawer/style.css
@@ -2,6 +2,12 @@ svg.railroad-diagram {
   background-color: hsl(30, 20%, 95%);
 }
 
+svg.railroad-diagram path {
+  stroke-width: 3;
+  stroke: black;
+  fill: rgba(0, 0, 0, 0);
+}
+
 svg.railroad-diagram text {
   font: bold 12px NotoSans;
   text-anchor: middle;
@@ -29,23 +35,9 @@ svg.railroad-diagram g.non-terminal text {
 }
 
 svg.railroad-diagram rect {
-  stroke-width: 1.3;
-  stroke: #9f9f9f;
-  fill: transparent;
-}
-
-svg.railroad-diagram path {
-  stroke-width: 1.2;
-  stroke: #9f9f9f;
-  fill: transparent;
-}
-
-[data-theme="dark"] svg.railroad-diagram rect {
-  stroke: #5e5e5e;
-}
-
-[data-theme="dark"] svg.railroad-diagram path {
-  stroke: #5e5e5e;
+  stroke-width: 3;
+  stroke: black;
+  fill: #95adee;
 }
 
 svg.railroad-diagram rect.group-box {
@@ -55,18 +47,9 @@ svg.railroad-diagram rect.group-box {
 }
 
 svg.railroad-diagram path.diagram-text {
-  stroke-width: 1;
+  stroke-width: 3;
   stroke: black;
   fill: white;
-}
-
-svg.railroad-diagram text {
-  font: normal 12px NotoSans;
-  fill: #1c1e21;
-}
-
-[data-theme="dark"] svg.railroad-diagram text {
-  fill: #e3e3e3;
 }
 
 svg.railroad-diagram g.diagram-text:hover path.diagram-text {
@@ -74,7 +57,18 @@ svg.railroad-diagram g.diagram-text:hover path.diagram-text {
 }
 
 div.svg-box {
-  height: 100%;
   width: 100%;
   overflow: auto;
+}
+
+[data-theme="dark"] svg.railroad-diagram path {
+  stroke-width: 3;
+  stroke: #474748;
+  fill: rgba(0, 0, 0, 0);
+}
+
+[data-theme="dark"] svg.railroad-diagram rect {
+  stroke-width: 3;
+  stroke: gray;
+  fill: #95adee;
 }
