chore: remove NotoSans

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,7 +17,7 @@
   --ifm-code-font-size: 90%;
   --ifm-font-size-base: 92%;
   --ifm-z-index-fixed: 200;
-  --ifm-font-family-base: Mulish, NotoSansSC, NotoSans, sans-serif;
+  --ifm-font-family-base: Mulish, sans-serif;
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
