--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -21,6 +21,8 @@
   --ifm-paragraph-margin-bottom: 0.5rem;
   --ifm-list-paragraph-margin: 0.2rem;
   letter-spacing: 0px;
+
+  --doc-sidebar-width: 260px !important;
 }
 
 /* hide home icon in breadcrumbs */
