style: h1 h2 h3 font size reduce 30% 30% 20%

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,18 @@
   --doc-sidebar-width: 260px !important;
 }
 
+.markdown h1:first-child {
+  --ifm-h1-font-size: 2.1rem;
+}
+
+.markdown > h2 {
+  --ifm-h2-font-size: 1.4rem;
+}
+
+.markdown > h3 {
+  --ifm-h3-font-size: 1.2rem;
+}
+
 /* hide home icon in breadcrumbs */
 .breadcrumbs li:first-child {
   display: none !important;
