style: border and padding

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,6 +23,7 @@
   letter-spacing: 0px;
 
   --doc-sidebar-width: 260px !important;
+  --ifm-tabs-padding-vertical: 0.5rem !important;
 }
 
 .markdown h1:first-child {
@@ -59,6 +60,18 @@ h3 {
 h4 {
   font-family: Montserrat-SemiBold !important;
 }
+
+@counter-style circled-digit {
+  system: fixed;
+  symbols: ➊ ➋ ➌ ➍ ➎ ➏ ➐ ➑ ➒ ➓;
+  suffix: " ";
+  font-size: 120px;
+}
+
+ol li {
+  list-style-type: circled-digit;
+}
+
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
@@ -202,7 +215,7 @@ table thead th {
   padding-bottom: 12px;
   border: none;
   background-color: white;
-  border-bottom: 2px solid var(--ifm-tabs-color-active);
+  border-bottom: 1px solid var(--ifm-tabs-color-active);
 }
 
 [data-theme="dark"] table th {
