--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -61,27 +61,61 @@ h4 {
   font-family: Montserrat-SemiBold !important;
 }
 
-@counter-style circled-digit {
-  system: fixed;
-  symbols: "\278A""\278B""\278C""\278D""\278E""\278F""\2790""\2791""\2792""\2793";
-  suffix: " ";
+/* Custom Ordered List  */
+.theme-doc-markdown ol {
+  counter-reset: circle-counter;
+  margin-left: 0;
+  padding-left: 1rem;
 }
 
 .theme-doc-markdown ol li {
-  list-style-type: circled-digit;
+  list-style: none;
+  counter-increment: circle-counter;
+  margin-bottom: 0.8rem;
 }
 
-[data-theme="light"] .theme-doc-markdown ol li::marker {
-  color: #a0a0a0;
+.theme-doc-markdown ol li::before {
+  font-size: 0.75rem;
+  content: counter(circle-counter);
+  background-color: #e1e1e1;
+  width: 1.5rem;
+  height: 1.5rem;
+  line-height: 1.5rem;
+  border-radius: 50%;
+  display: inline-block;
+  color: #202020;
+  text-align: center;
+  position: relative;
+  top: -2px;
+  left: -0.5rem;
 }
 
-.theme-doc-markdown ol li::marker {
-  font-size: 1.5rem;
+/* Custom Unordered List */
+.theme-doc-markdown ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 1rem;
 }
 
-/* .theme-doc-markdown ul li::marker {
-  color: #a0a0a0;
-} */
+.theme-doc-markdown ul li {
+  list-style: none;
+}
+
+.theme-doc-markdown ul li::before {
+  content: "";
+  background-color: #e1e1e1;
+  width: 0.6rem;
+  height: 0.6rem;
+  line-height: 0.6rem;
+  border-radius: 50%;
+  display: inline-block;
+  color: #202020;
+  text-align: center;
+  position: relative;
+  margin-right: 0.5rem;
+  top: -2px;
+  left: -0.3rem;
+}
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
