--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -62,20 +62,20 @@ h4 {
 }
 
 /* Custom Ordered List  */
-.theme-doc-markdown ol {
+.theme-doc-markdown ol:not(.tabs) {
   counter-reset: circle-counter;
   margin-left: 0;
   padding-left: 1rem;
 }
 
-.theme-doc-markdown ol li {
+.theme-doc-markdown ol li:not(.tabs__item) {
   list-style: none;
-  counter-increment: circle-counter;
   margin-bottom: 0.8rem;
 }
 
-.theme-doc-markdown ol li::before {
+.theme-doc-markdown ol li:not(.tabs__item) > p:first-child::before {
   font-size: 0.75rem;
+  counter-increment: circle-counter;
   content: counter(circle-counter);
   background-color: #e1e1e1;
   width: 1.5rem;
@@ -91,30 +91,9 @@ h4 {
 }
 
 /* Custom Unordered List */
-.theme-doc-markdown ul {
-  list-style: none;
-  margin-left: 0;
-  padding-left: 1rem;
-}
-
-.theme-doc-markdown ul li {
-  list-style: none;
-}
-
-.theme-doc-markdown ul li::before {
-  content: "";
-  background-color: #e1e1e1;
-  width: 0.6rem;
-  height: 0.6rem;
-  line-height: 0.6rem;
-  border-radius: 50%;
-  display: inline-block;
-  color: #202020;
-  text-align: center;
-  position: relative;
-  margin-right: 0.5rem;
-  top: -2px;
-  left: -0.3rem;
+.theme-doc-markdown ul li:not(.tabs__item)::marker {
+  color: #e1e1e1;
+  font-size: 1.4rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
