--- a/src/theme/DefaultButton/style.css
+++ b/src/theme/DefaultButton/style.css
@@ -1,5 +1,6 @@
 .default {
-  margin: 10px 4px;
+  margin: 10px 0;
+  margin-right: 8px;
   display: inline-block;
   appearance: none;
   font-size: var(--ifm-font-size-base);
