--- a/src/theme/DefaultButton/style.css
+++ b/src/theme/DefaultButton/style.css
@@ -5,7 +5,7 @@
   appearance: none;
   font-size: var(--ifm-font-size-base);
   background-color: var(--ifm-color-primary-darker);
-  border: 1px solid #a9bcf0;
+  border: 1px solid #71bde9;
   border-radius: 6px;
   box-sizing: border-box;
   color: #fff;
@@ -26,12 +26,12 @@
 }
 
 .default:hover {
-  background-color: #3d67d7;
+  background-color: #86F2DD;
 }
 
 [data-theme="dark"] .default:hover {
-  background-color: #8da3e1;
-  border: 1px solid #a7b6e0;
+  background-color: #6cc3f2;
+  border: 1px solid #71bde9;
 }
 
 .default:focus {
