feat: custom sidebar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,7 +25,7 @@
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
   --ifm-navbar-height: 3rem;
-  }
+}
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
@@ -44,7 +44,6 @@
   --ifm-color-success-light: rgb(38, 178, 38);
   --ifm-color-success-lighter: rgba(77, 191, 77, 0.212);
   --ifm-color-success-lightest: rgb(128, 210, 128);
-  
 }
 
 html[data-theme="dark"] {
@@ -59,8 +58,8 @@ html[data-theme="dark"] {
   --ifm-code-background: #fafafa28;
   --ifm-breadcrumb-color-active: #86f2dd;
   --ifm-menu-color-active: #86f2dd;
-  --docusaurus-collapse-button-bg: #001F2B !important;
-  --ifm-toc-border-color: #001F2B;
+  --docusaurus-collapse-button-bg: #001f2b !important;
+  --ifm-toc-border-color: #001f2b;
 }
 
 .theme-doc-sidebar-container {
@@ -96,7 +95,7 @@ h1 {
 
 h2 {
   padding-bottom: 10px;
-  border-bottom: 1px solid #86F2DD;
+  border-bottom: 1px solid #86f2dd;
   font-family: Montserrat !important;
 }
 
@@ -142,6 +141,32 @@ h4 {
 .theme-doc-markdown ul li:not(.tabs__item)::marker {
   color: #909090;
   font-size: 1.1rem;
+}
+
+/* Custom sidebar expand button */
+.menu {
+  scrollbar-width: none;
+}
+
+.menu::-webkit-scrollbar {
+  display: none;
+}
+
+.menu__list-item--collapsed .menu__link--sublist::after,
+.menu__list-item--collapsed .menu__caret::before {
+  background: url(../../static/img/plus.svg) 50% / 1rem 1rem;
+}
+
+.menu__link--sublist-caret:after {
+  content: "";
+  margin-left: auto;
+  min-width: 1.25rem;
+  filter: var(--ifm-menu-link-sublist-icon-filter);
+  height: 1.25rem;
+  width: 1.25rem;
+  transform: rotate(0turn);
+  background: url(../../static/img/minus.svg) 50% / 1rem 1rem;
+  transition: background var(--ifm-transition-fast) linear;
 }
 
 .docusaurus-highlight-code-line {
