--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,8 @@
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
   --ifm-navbar-height: 3rem;
+
+  --ifm-menu-link-padding-horizontal: 0;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -62,8 +64,24 @@ html[data-theme="dark"] {
   --ifm-toc-border-color: #001f2b;
 }
 
+/* custom sidebar menu */
 .theme-doc-sidebar-container {
   border-right: none !important;
+}
+
+.theme-doc-sidebar-item-category-level-1 > div > a,
+.theme-doc-sidebar-item-category-level-1 > div > a:hover {
+  color: var(--ifm-menu-color-active);
+  padding-top: 1.4rem;
+}
+
+.theme-doc-sidebar-item-category-level-1 > div:hover {
+  background: none;
+  color: var(--ifm-menu-color-active);
+}
+
+.menu__link {
+  font-size: 0.9rem;
 }
 
 .navbar--fixed-top {
