--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,8 +25,6 @@
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
   --ifm-navbar-height: 3rem;
-
-  --ifm-menu-link-padding-horizontal: 0;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -77,11 +75,24 @@ html[data-theme="dark"] {
 
 .theme-doc-sidebar-item-category-level-1 > div:hover {
   background: none;
-  color: var(--ifm-menu-color-active);
+  color: #0098ef;
 }
 
 .menu__link {
   font-size: 0.9rem;
+}
+
+.menu__list,
+.menu__list .menu__list {
+  padding-left: 0;
+}
+
+.theme-doc-sidebar-item-link-level-3 {
+  padding-left: 0.75rem;
+}
+
+.theme-doc-sidebar-item-link-level-4 {
+  padding-left: 1rem;
 }
 
 .navbar--fixed-top {
