--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -192,6 +192,14 @@ h4 {
 .menu__list-item--collapsed .menu__caret::before {
   background: no-repeat url(../../static/img/plus.svg) 50% / 1rem 1rem;
   filter: var(--ifm-menu-link-sublist-icon-filter);
+  content: "";
+  margin-left: auto;
+  min-width: 1.25rem;
+  filter: none;
+  height: 1.25rem;
+  width: 1.25rem;
+  transform: rotate(0turn);
+  transform-origin: center;
 }
 
 .menu__link--sublist-caret::after {
@@ -204,7 +212,7 @@ h4 {
   transform: rotate(0turn);
   transform-origin: center;
   background: no-repeat url(../../static/img/minus.svg) 50% / 1rem 1rem;
-  transition: none;
+  transition: background 200ms ease-out;
 }
 
 .docusaurus-highlight-code-line {
