--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,6 +26,7 @@
   --doc-sidebar-width: 260px !important;
   --ifm-tabs-padding-vertical: 0.5rem !important;
   --ifm-navbar-height: 3rem;
+  --ifm-menu-link-padding-horizontal: 0.5rem;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -85,17 +86,9 @@ html[data-theme="dark"] {
   font-size: 1rem;
 }
 
-.menu__list,
-.menu__list .menu__list {
+.theme-doc-sidebar-item-link-level-2 > .menu__link,
+.theme-doc-sidebar-item-category-level-2 > .menu__list-item-collapsible > .menu__link {
   padding-left: 0;
-}
-
-.theme-doc-sidebar-item-link-level-3 {
-  padding-left: 0.75rem;
-}
-
-.theme-doc-sidebar-item-link-level-4 {
-  padding-left: 1rem;
 }
 
 .navbar--fixed-top {
