--- a/src/components/FeedbackForm/index.module.css
+++ b/src/components/FeedbackForm/index.module.css
@@ -113,3 +113,50 @@ p.rightText {
     align-items: flex-start;
   }
 }
+
+@media (min-width: 997px) {
+  .happyReact {
+    max-width: 75% !important;
+  }
+}
+
+.happyReact .title {
+  text-align: center;
+}
+
+.widget .grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-height: 50px;
+}
+
+.widget .cell {
+  width: 4rem;
+}
+
+.widget .reaction {
+  width: 100%;
+  color: #7798ef;
+  border: #7798ef 1px solid;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+}
+
+.widget .reaction:hover {
+  color: #7798ef88;
+  border: #7798ef 1px solid;
+  background-color: #1976d20a;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.widget .footer {
+  display: none;
+  color: #e3e3e3;
+  margin-top: 10px;
+  margin-left: 0;
+}
