feat: grid and cards

--- a/src/theme/OutlinedCard/styles.module.css
+++ b/src/theme/OutlinedCard/styles.module.css
@@ -2,7 +2,6 @@ div.boxContainer {
   margin-top: 1rem;
   margin-bottom: 1rem;
   min-width: 275px;
-  max-width: 300px;
 }
 
 div.cardContainer {
@@ -17,6 +16,40 @@ div.cardContainer:hover {
   box-shadow: 0 0 0 1px #cddbff;
 }
 
+div.cardContent {
+  padding-bottom: 1rem;
+}
+
 div.title {
   margin-bottom: 1rem;
+}
+
+button.cardBtn {
+  text-transform: none;
+}
+
+p.cardLinks {
+  margin-top: 1rem;
+}
+
+p.cardLink {
+  cursor: pointer;
+  color: #95adee;
+  font-size: 1.1rem;
+  margin-bottom: 0.1rem;
+  margin-right: 4px;
+}
+
+p.cardLink:hover {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  color: #95adee88;
+}
+
+div.flexBox {
+  color: #95adee;
+  font-size: 1.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
