--- a/src/theme/ConnectorGenerator/styles.module.css
+++ b/src/theme/ConnectorGenerator/styles.module.css
@@ -1,3 +1,7 @@
+div.mainContainer {
+    padding: 0 1rem;
+}
+
 label.labelText {
     font-style: normal;
     font-weight: 400;
@@ -16,9 +20,10 @@ label.radioLabel {
 }
 
 
-div.header {
+h5.header {
     font-weight: 500;
     font-size: 21px;
     line-height: 29px;
     color: #484964;
+    margin-top: 1rem;
 }
