--- a/src/theme/ConnectorGenerator/styles.module.css
+++ b/src/theme/ConnectorGenerator/styles.module.css
@@ -1,29 +1,32 @@
 div.mainContainer {
-    padding: 0 1rem;
+  padding: 0 1rem;
 }
 
 label.labelText {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #363A40;
-    margin-bottom: 0.5rem;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #363a40;
+  margin-bottom: 0.5rem;
 }
 
 label.radioLabel {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 22px;
-    color: #363A40;
-    padding-left: 1rem;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 22px;
+  color: #363a40;
+  padding-left: 1rem;
 }
 
-
 h5.header {
-    font-weight: 500;
-    font-size: 21px;
-    line-height: 29px;
-    color: #484964;
-    margin-top: 1rem;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 29px;
+  color: #484964;
+  margin-top: 1rem;
+}
+
+.selectConnector {
+  width: 350px;
 }
